--- a/package.json
+++ b/package.json
@@ -2,13 +2,16 @@
   "name": "marketplace",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "eslint"
-  },
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "start": "next start",
+  "lint": "next lint",
+  "seed": "node --experimental-modules scripts/seedProducts.js"
+},
+"type": "module",
   "dependencies": {
+    "firebase": "^12.8.0",
     "next": "16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3"
